frontend/test/should_pass/bitbucket12.grg
rule other {
    modify {
    }
}
package Foo {
    rule find {
        modify {
        }
    }
}